# Ijadi

./: ChangeLog  Makefile.am  README  configure.ac
GBee/: ReadMe.md  configure.ac
GBee/Resources/: InitScript.sql  Makefile.am  help
GBee/Source/: Makefile.am  gbee-define.h  gbee-intercept.c  gbee-intercept.h  gbee-iparser.c  gbee-iparser.h  gbee-parser.c  gbee-parser.h  gbee-string.c  gbee-string.h  main.c
Ijadi/: ChangeLog  Makefile.am  configure.ac
Ijadi/Resources/: Makefile.am
Ijadi/Resources/UI/: Makefile  Makefile.am  Makefile.in
Ijadi/Script/: UpdateSource.sh  newProject.sh  parser1.py  parser3-1.py  parser4.py  projectinfo.sh
Ijadi/Source/: ijadi-wizard.c  main.c
Resources/: Makefile.am  ijadi.desktop  style.css
Resources/UI/: new-wizard.ui
Resourses/: style.css
Script/: Makefile.am  Update.sh  parser1-1.py  parser2.py  parser3.py
Source/: Makefile.am  ijadi-application.c  ijadi-application.h  ijadi-define.h  ijadi-gui.c  ijadi-gui.h  ijadi-wizard.c  ijadi-wizard.h  main.c
