SUBDIRS = UI
#datadir = /usr/share or something like that
#here we create a directory in /usr/share and then put some Data in it
Resourcesdir = $(datadir)/ijadi/Resources
Applicationdir = $(datadir)/applications

Resources_DATA   = new-header.png style.css TemplateProject.tar.gz
Application_DATA = ijadi.desktop

EXTRA_DIST = new-header.png new-header-2.png style.css ijadi.desktop TemplateProject.tar.gz
