#datadir = /usr/share or something like that
#here we create a directory in /usr/share and then put some Data in it
Scriptdir = $(datadir)/ijadi/Script

Script_DATA   = parser1.py parser1-1.py parser2.py parser3.py parser3-1.py parser4.py newProject.sh projectinfo.sh Update.sh UpdateSource.sh

EXTRA_DIST = parser1.py parser1-1.py parser2.py parser3.py parser3-1.py parser4.py newProject.sh projectinfo.sh Update.sh UpdateSource.sh
